# ai-fun

./: .env.example  .gitignore  GATE_1_REPORT.md  GATE_2_REPORT.md  GATE_3_REPORT.md  GATE_4_REPORT.md  GATE_5_REPORT.md  GATE_6_REPORT.md  GATE_7_REPORT.md  GATE_8_REPORT.md  README.md  pyproject.toml  run.bat  run.dev.bat
app/: __init__.py  config.py  db.py  logging_config.py  main.py
app/api/: health.py  jobs.py  settings.py  ui.py
app/models/: __init__.py  job.py
app/providers/: __init__.py  base.py  exceptions.py  llm_base.py  llm_exceptions.py  media_exceptions.py  wavespeed.py  wavespeed_llm.py
app/schemas/: __init__.py  base_image.py  character_edit.py  controlled_video.py  final_video.py  job.py  prompt_api.py  prompts.py  source_video.py
app/services/: base_image_generation.py  character_edit_generation.py  control_video_generation.py  ffmpeg.py  final_video_assembly.py  image_download.py  image_normalize.py  job_recovery.py  prompt_contract.py  prompt_generation.py  prompt_json.py  reference_upload.py  source_video_generation.py  storage.py  (+5 more)
tests/: conftest.py  fakes.py  media_fakes.py  test_gate2_api.py  test_gate2_findings.py  test_gate2_json.py  test_gate2_llm_provider.py  test_gate2_request_contract.py  test_gate2_status.py  test_gate3_api.py  test_gate3_status.py  test_gate4_api.py  test_gate5_api.py  test_gate6_api.py  test_gate7_api.py  test_gate8_ui.py  test_gate8_workflow.py  test_health.py  test_jobs.py  test_paid_retry_policy.py  test_provider.py  test_status_and_recovery.py  test_storage.py  test_task_runner.py  test_transition_detector.py
(+5 files in other folders)
